			Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       1.0 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN SLIDEDESIGNERGUI VERSION 1.0.0


SIGNIFICANT USER-VISIBLE CHANGES


NEW FEATURES

    o	Initial release.

