@@ -1,6 +1,6 @@
 Package: SlideDesignerGUI
-Version: 1.0-0
-Date: 2008/11/07
+Version: 1.0-1
+Date: 2008/11/17
 Title: Slide Designer GUI package
 Author: P. Roebuck, based on earlier work by Kevin R. Coombes
 Maintainer: P. Roebuck <proebuck@mdanderson.org>
